...

            Text(text = "Total is $total")

            Button(onClick = {
                total = calculate.add(number1.text.toInt() , number2.text.toInt())
            }){
                Text(text="Add")
            }


            OutlinedTextField(
                value = name,
                onValueChange = {name = it},
...
